got input to append new rows

--- a/style.css
+++ b/style.css
@@ -2,11 +2,15 @@ html {
     background-color: gray;
 }
 
-.yellow {
-    background-color: yellow;
-}
-
 div {
     margin: 5px;
     background-color: lightgray;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+table, th, td {
+    border: 3px solid rgb(77, 182, 137);
 }
